Complete Overhaul - added about me - added interests - added min menu - impliments material design

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+::-webkit-scrollbar {
+width: 9px;
+}
+::-webkit-scrollbar-track {
+
+}
+::-webkit-scrollbar-thumb {
+
+}
+
+body{
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+html {
+  background-color: #bbbebf;
+  height: 70%;
+}
+
