- added simple languages tab

--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -3,10 +3,15 @@
   background-color: #1b1b1b;
   min-height: 80vh;
   border-radius: 8px;
+
   h3 {
     color: #eceff1;
     font-size: xx-large;
     margin: 10px 0 0 10px;
+  }
+
+  .section{
+    background-color: #eceff1;
   }
 
 }
