--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,16 @@
 <div id="menu">
-  <h2>Curtis Pritchard</h2>
+  <h2>NAME HERE</h2>
   <app-menu></app-menu>
 </div>
 <br>
 <div class="content-container">
-  <app-about-me></app-about-me>
+  <app-about-me id="aboutMe"></app-about-me>
 
-  <app-interests></app-interests>
+  <app-interests id="interests"></app-interests>
 </div>
 <br>
 
-<app-languages>
+<app-languages id="languages">
 
 </app-languages>
 
