--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -38,9 +38,17 @@ $primary :#1b1b1b;
 
 
 app-languages {
-  width: 100vw;
-  background-image: linear-gradient(180deg, #1b1b1b 70%, #535353 90%);
-  height: 100px;
+  width: 90vw;
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.43) 50%, #2b2b2b 70%, #535353 90%);
+  height: 150px;
   display: flex;
+  overflow-x: scroll;
+  border: 2px solid black;
+  margin: 0 auto;
 
+
+
+}
+app-languages::-webkit-scrollbar {
+  width: 4px;
 }
