--- a/src/app/interests/interests.component.scss
+++ b/src/app/interests/interests.component.scss
@@ -3,32 +3,45 @@
   background-color: #1b1b1b;
   min-height: 80vh;
   border-radius: 8px;
+  padding: 5px;
 
-  h3 {
+  h2 {
     color: #eceff1;
     font-size: xx-large;
     margin: 10px 0 0 10px;
   }
-}
-.flowContainer{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: flex-start;
-  margin-top: 10px;
+  h3{
+    margin: 0;
+    padding: 0;
+  }
+  .content-container {
+    width: 49%;
+    padding-top: 49%;
+    border: 1px solid black;
+    position: relative;
 
-}
-.flowItem{
-  width: 45%;
-  height: 250px;
-  background-color: #eceff1;
-  margin-bottom: 20px;
+  }
 
+  .text, .image {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    font-size: 20px;
+    background-color: #eceff1;
+  }
+  .text {
+    padding: 5px;
+    box-sizing: border-box;
+  }
 
-}
-div.flowItem{
-  color: black;
-  padding: 6px;
-  font-size: 18px;
-  background-color: #eceff1;
+  .flowContainer{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
+  }
+
 }
