webpage now expands individual elements if its width does not meet the requirement.

--- a/src/app/interests/interests.component.html
+++ b/src/app/interests/interests.component.html
@@ -1,13 +1,11 @@
-<div id="interests">
   <h2 class="name">Interests</h2>
   <div class="flowContainer">
-    <div class="content-container"><div class="text"><h3>Raspberry PI</h3>something will go here</div></div>
+    <div class="content-container"><div class="text"><h3>Raspberry PI</h3>I have a great interest in the use of raspberry pi's as a personal game console.</div></div>
     <div class="content-container"><div class="image" style="background: url(https://upload.wikimedia.org/wikipedia/commons/f/f1/Raspberry_Pi_4_Model_B_-_Side.jpg) no-repeat center; background-size: cover" ></div></div>
     <div class="content-container"><div class="image" style="background: url(https://cdn.chordify.net/pages/wp-content/uploads/2019/08/random-chiasso-1024x683.png) no-repeat center; background-size: cover" ></div></div>
-    <div class="content-container"><div class="text">things will also go here</div></div>
+    <div class="content-container"><div class="text"><h3>Video Games</h3>things will also go here</div></div>
     <div class="content-container"><div class="text">and also here</div></div>
     <div class="content-container"><div class="image" style="background: url(https://hackernoon.com/hn-images/1*jFyawcsqoYctkTuZg6wQ1A.jpeg) no-repeat center; background-size: cover" ></div></div>
     <div class="content-container"><div class="image" style="background: url(http://newnation.sg/wp-content/uploads/random-pic-internet-22.jpg) no-repeat center; background-size: cover" ></div></div>
     <div class="content-container"><div class="text">well, how about here?</div></div>
   </div>
-</div>
