--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,17 +1,18 @@
-#aboutMe {
-  width: 50vw;
-  background-color: #1b1b1b;
-  border-radius: 8px;
-  display: flex;
-  flex-direction: column;
-  color: #eceff1;
+
   h2 {
-    margin:20px;
+    margin:20px 0 0 20px;
+    font-size: xx-large;
+  }
+  h3{
+    font-size: x-large;
+  }
+  p{
+    font-size: 19px;
   }
 
   .section {
     box-sizing: border-box;
-    margin: 5px 50px;
+    margin: 0 50px;
       p {
         text-indent: 20px;
         margin-right: 10%;
@@ -20,4 +21,11 @@
   }
 
 
+
+
+@media only screen and (max-width: 1060px) {
+  .section {
+    margin: 10px;
+    width: 100%;
+  }
 }
