--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,7 +2,7 @@ $primary :#1b1b1b;
 
 
 #menu {
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
   height:60px;
@@ -15,9 +15,9 @@ $primary :#1b1b1b;
     width: 350px;
     float: left;
     font-size: xxx-large;
-    margin: 4px 0 0 10px;
+    margin: 25px 0 0 10px;
     color: #eceff1;
-
+    height: 100%;
   }
 
   app-menu {
@@ -27,13 +27,14 @@ $primary :#1b1b1b;
     align-content: center;
     margin: 15px 0 5px 0;
     width: 700px;
+
   }
 
 }
 .content-container {
   display: flex;
   justify-content: space-evenly;
-  margin-top: 100px;
+  margin-top: 10px;
 }
 
 
@@ -51,4 +52,42 @@ app-languages {
 }
 app-languages::-webkit-scrollbar {
   width: 4px;
+}
+
+app-about-me {
+  width: 50vw;
+  height: 100%;
+  background-color: #1b1b1b;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  color: #eceff1;
+}
+
+app-interests {
+  width: 30vw;
+  background-color: #1b1b1b;
+  height: 100%;
+  border-radius: 8px;
+  padding: 5px;
+}
+
+@media only screen and (max-width: 1050px) {
+
+  .content-container {
+    width: 100%;
+    flex-direction: column;
+  }
+  app-interests, app-about-me {
+    width: 100%;
+
+    border-radius: 0;
+
+  }
+  app-about-me {
+    padding: 5px;
+  }
+  app-menu {
+    visibility: hidden;
+  }
 }
