--- a/src/app/interests/interests.component.scss
+++ b/src/app/interests/interests.component.scss
@@ -8,6 +8,7 @@
     margin: 0;
     padding: 0;
   }
+
   .content-container {
     width: 49%;
     padding-top: 49%;
@@ -28,6 +29,8 @@
   .text {
     padding: 5px;
     box-sizing: border-box;
+    font-size: 15px;
+
   }
 
   .flowContainer{
