replaced flex boxes with floating

--- a/src/app/interests/interests.component.html
+++ b/src/app/interests/interests.component.html
@@ -6,4 +6,12 @@
     <div class="content-container"><div class="text"><h3></h3></div></div>
     <div class="content-container"><div class="text"><h3>Raspberry PI</h3> I love to wrok on mini projects that I can use at home. Ive created mini consoles, as well as a smart tv build that my whole family used for years. I plan on learning to do wirring for my projects in the future.</div></div>
     <div class="content-container"><div class="image" style="background: url(https://cdn.pixabay.com/photo/2016/03/27/20/49/usb-1284227_1280.jpg) no-repeat center; background-size: cover" ></div></div>
+    <div class="content-container"><div class="image" style="background: url(https://cdn.pixabay.com/photo/2016/06/29/09/31/chess-1486368_1280.jpg) no-repeat center; background-size: cover" ></div></div>
+    <div class="content-container"><div class="text"><h3></h3></div></div>
+    <div class="content-container"><div class="text"><h3>Raspberry PI</h3> I love to wrok on mini projects that I can use at home. Ive created mini consoles, as well as a smart tv build that my whole family used for years. I plan on learning to do wirring for my projects in the future.</div></div>
+    <div class="content-container"><div class="image" style="background: url(https://cdn.pixabay.com/photo/2016/03/27/20/49/usb-1284227_1280.jpg) no-repeat center; background-size: cover" ></div></div>
+    <div class="content-container"><div class="image" style="background: url(https://cdn.pixabay.com/photo/2016/06/29/09/31/chess-1486368_1280.jpg) no-repeat center; background-size: cover" ></div></div>
+    <div class="content-container"><div class="text"><h3></h3></div></div>
+    <div class="content-container"><div class="text"><h3>Raspberry PI</h3> I love to wrok on mini projects that I can use at home. Ive created mini consoles, as well as a smart tv build that my whole family used for years. I plan on learning to do wirring for my projects in the future.</div></div>
+    <div class="content-container"><div class="image" style="background: url(https://cdn.pixabay.com/photo/2016/03/27/20/49/usb-1284227_1280.jpg) no-repeat center; background-size: cover" ></div></div>
   </div>
