--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,10 +1,5 @@
-
-  a {
-  border-radius: 5px;
-  box-sizing: border-box;
-  width: 120px;
- img{
-   height: 30px;
- }
-
+a {
+ border-radius: 24px;
+  width: 130px;
+  vertical-align: middle;
 }
