--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,30 +1,26 @@
 
-  h2 {
-    margin:20px 0 0 20px;
-    font-size: xx-large;
-  }
-  h3{
-    font-size: x-large;
-  }
-  p{
-    font-size: 19px;
-  }
+h2{
+  min-width: 100px;
+  margin: 50px 0 25px 0;
+  display: inline-block;
+  padding: 10px;
+  border-radius: 20px 0;
+  background-color: ghostwhite;
 
-  .section {
-    box-sizing: border-box;
-    margin: 0 50px;
-      p {
-        text-indent: 20px;
-        margin-right: 10%;
-         text-align: justify;
-      }
-  }
+}
 
+h3 {
+  margin: 0 0 10px 20px;
 
+}
+div.section{
+  width: 100%;
+  color: ghostwhite;
 
+}
 
-@media only screen and (max-width: 1060px) {
-  .section {
-
-      }
+p {
+  background-color: #262626;
+  padding: 15px 10px;
+  border-radius: 25px;
 }
