--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,93 +1,43 @@
-$primary :#1b1b1b;
-
-
 #menu {
-  position: sticky;
+  background-color: #262626;
+  position: fixed;
   top: 0;
   left: 0;
-  height:60px;
+  align-items: center;
   width: 100%;
-  background-color: $primary;
-  box-shadow: 0 3px 6px;
-  z-index: 1;
+  z-index: 2;
 
   h2 {
-    width: 350px;
     float: left;
-    font-size: xxx-large;
-    margin: 25px 0 0 10px;
-    color: #eceff1;
-    height: 100%;
+    color: ghostwhite;
+    font-size: 42px;
   }
 
   app-menu {
     float: right;
     display: flex;
-    justify-content: space-evenly;
-    align-content: center;
-    margin: 15px 0 5px 0;
+    justify-content: space-around;
     width: 700px;
-
+    height: 40px;
+    margin-top: 6px;
   }
 
 }
-.content-container {
-  display: flex;
-  justify-content: space-evenly;
-  margin-top: 10px;
-}
+.content-container{
 
-
-app-languages {
-  width: 90vw;
-  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.43) 50%, #2b2b2b 70%, #535353 90%);
-  height: 150px;
-  display: flex;
-  overflow-x: scroll;
-  border: 2px solid black;
-  margin: 0 auto;
-
-
-
-}
-app-languages::-webkit-scrollbar {
-  width: 4px;
-}
-
-app-about-me {
-  width: 50vw;
-  height: 100%;
-  background-color: #1b1b1b;
-  border-radius: 8px;
-  display: flex;
-  flex-direction: column;
-  color: #eceff1;
-}
-
-app-interests {
-  width: 30vw;
-  background-color: #1b1b1b;
-  height: 100%;
-  border-radius: 8px;
-  padding: 5px;
-}
-
-@media only screen and (max-width: 1050px) {
-
-  .content-container {
-    width: 100%;
-    flex-direction: column;
-  }
-  app-interests, app-about-me {
-    width: 100%;
-
-    border-radius: 0;
+  app-about-me{
+    float: left;
+    margin: 0 5%;
 
   }
   app-about-me {
-    padding: 5px;
+    width: 50%;
   }
-  app-menu {
-    visibility: hidden;
+  app-interests {
+    float: right;
+    margin: 0 5%;
+    width: 30%;
+
   }
+
 }
