--- a/src/app/interests/interests.component.scss
+++ b/src/app/interests/interests.component.scss
@@ -1,43 +1,25 @@
-
-  h2 {
-    color: #eceff1;
-    font-size: xx-large;
-    margin: 10px 0 0 10px;
-  }
-  h3{
-    margin: 0;
-    padding: 0;
-  }
-
-  .content-container {
-    width: 49%;
-    padding-top: 49%;
-    border: 1px solid black;
-    position: relative;
-
-  }
-
-  .text, .image {
+h2 {
+  margin: 50px 0 25px 0;
+  display: inline-block;
+  padding: 10px;
+  border-radius: 20px 0;
+  background-color: ghostwhite;
+  min-width: 30%;
+}
+.content-container{
+  width: 50%;
+  height: 0;
+  padding-top: 50%;
+  position: relative;
+  float: left;
+  .text, .image{
     position: absolute;
-    top:0;
+    top: 0;
     left: 0;
-    width: 100%;
     height: 100%;
-    font-size: 20px;
-    background-color: #eceff1;
-  }
-  .text {
-    padding: 5px;
-    box-sizing: border-box;
-    font-size: 15px;
-
-  }
-
-  .flowContainer{
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
     width: 100%;
-    height: 100%;
+    background-color: ghostwhite;
+    border: #262626 solid 10px;
+    font-size: 24px;
   }
-
+}
