refactored all css files

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,9 +1,7 @@
-
-  <h2 class="name">About Me</h2>
-
+<div class="container">
   <div *ngFor="let message of messages" class="section">
     <h3>{{message.header}}</h3>
     <p>{{message.message}}</p>
   </div>
-
+</div>
 
