--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,15 +2,11 @@
   <h2>Curtis Pritchard</h2>
   <app-menu></app-menu>
 </div>
-<br>
-<div class="content-container">
-  <app-about-me id="aboutMe"></app-about-me>
 
-  <app-interests id="interests"></app-interests>
-</div>
-<br>
+<app-about-me id="aboutMe"></app-about-me>
 
-<app-languages id="languages">
+<app-interests id="interests"></app-interests>
 
-</app-languages>
+<app-languages id="languages"></app-languages>
 
+<app-git-hub></app-git-hub>
