--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,28 +16,15 @@
   app-menu {
     float: right;
     display: flex;
-    justify-content: space-around;
-    width: 700px;
+    justify-content: space-between;
+    width: 40%;
     height: 40px;
     margin-top: 6px;
+    margin-right: 10px;
   }
 
 }
-.content-container{
 
-  app-about-me{
-    float: left;
-    margin: 0 5%;
 
-  }
-  app-about-me {
-    width: 50%;
-  }
-  app-interests {
-    float: right;
-    margin: 0 5%;
-    width: 30%;
 
-  }
 
-}
