--- a/src/app/interests/interests.component.html
+++ b/src/app/interests/interests.component.html
@@ -1,17 +1,10 @@
-  <h2 class="name">Interests</h2>
-  <div class="flowContainer">
-    <div class="content-container"><div class="text"><h3>Websites</h3>I have a wish to create stunning websites that will draw all its users back. I strive to add more life into each and every website, whether it be with animations, or its core theme.</div></div>
-    <div class="content-container"><div class="image" style="background: url(https://cdn.pixabay.com/photo/2018/05/18/15/30/webdesign-3411373_1280.jpg) no-repeat center; background-size: cover" ></div></div>
-    <div class="content-container"><div class="image" style="background: url(https://cdn.pixabay.com/photo/2016/06/29/09/31/chess-1486368_1280.jpg) no-repeat center; background-size: cover" ></div></div>
-    <div class="content-container"><div class="text"><h3></h3></div></div>
-    <div class="content-container"><div class="text"><h3>Raspberry PI</h3> I love to wrok on mini projects that I can use at home. Ive created mini consoles, as well as a smart tv build that my whole family used for years. I plan on learning to do wirring for my projects in the future.</div></div>
-    <div class="content-container"><div class="image" style="background: url(https://cdn.pixabay.com/photo/2016/03/27/20/49/usb-1284227_1280.jpg) no-repeat center; background-size: cover" ></div></div>
-    <div class="content-container"><div class="image" style="background: url(https://cdn.pixabay.com/photo/2016/06/29/09/31/chess-1486368_1280.jpg) no-repeat center; background-size: cover" ></div></div>
-    <div class="content-container"><div class="text"><h3></h3></div></div>
-    <div class="content-container"><div class="text"><h3>Raspberry PI</h3> I love to wrok on mini projects that I can use at home. Ive created mini consoles, as well as a smart tv build that my whole family used for years. I plan on learning to do wirring for my projects in the future.</div></div>
-    <div class="content-container"><div class="image" style="background: url(https://cdn.pixabay.com/photo/2016/03/27/20/49/usb-1284227_1280.jpg) no-repeat center; background-size: cover" ></div></div>
-    <div class="content-container"><div class="image" style="background: url(https://cdn.pixabay.com/photo/2016/06/29/09/31/chess-1486368_1280.jpg) no-repeat center; background-size: cover" ></div></div>
-    <div class="content-container"><div class="text"><h3></h3></div></div>
-    <div class="content-container"><div class="text"><h3>Raspberry PI</h3> I love to wrok on mini projects that I can use at home. Ive created mini consoles, as well as a smart tv build that my whole family used for years. I plan on learning to do wirring for my projects in the future.</div></div>
-    <div class="content-container"><div class="image" style="background: url(https://cdn.pixabay.com/photo/2016/03/27/20/49/usb-1284227_1280.jpg) no-repeat center; background-size: cover" ></div></div>
-  </div>
+<div class="flowContainer">
+  <div class="content-container"><div class="text"><h3>Websites</h3>I have a wish to create stunning websites that will draw all its users back. I strive to add more life into each and every website, whether it be with animations, or its core theme.</div></div>
+  <div class="content-container"><div class="image" style="background: url(https://cdn.pixabay.com/photo/2018/05/18/15/30/webdesign-3411373_1280.jpg) no-repeat center; background-size: cover" ></div></div>
+  <div class="content-container"><div class="image" style="background: url(https://cdn.pixabay.com/photo/2016/06/29/09/31/chess-1486368_1280.jpg) no-repeat center; background-size: cover" ></div></div>
+  <div class="content-container"><div class="text"><h3>gggggggggggggggg</h3>nnnnnnnnnnnnnnnnnnnnn</div></div>
+  <div class="content-container"><div class="text"><h3>Raspberry PI</h3> I love to wrok on mini projects that I can use at home. Ive created mini consoles, as well as a smart tv build that my whole family used for years. I plan on learning to do wirring for my projects in the future.</div></div>
+  <div class="content-container"><div class="image" style="background: url(https://cdn.pixabay.com/photo/2016/03/27/20/49/usb-1284227_1280.jpg) no-repeat center; background-size: cover" ></div></div>
+  <div class="content-container"><div class="image" style="background: url(https://cdn.pixabay.com/photo/2016/06/29/09/31/chess-1486368_1280.jpg) no-repeat center; background-size: cover" ></div></div>
+  <div class="content-container"><div class="text"><h3>ggggggggggggggg</h3>ggggggggggggggggggggggggg</div></div>
+</div>
