--- a/src/app/interests/interests.component.scss
+++ b/src/app/interests/interests.component.scss
@@ -1,25 +1,40 @@
-h2 {
-  margin: 50px 0 25px 0;
-  display: inline-block;
+
+.flowContainer{
+  margin: 100px 15% 0;
+  top: 0;
+  left: 0;
+  background-color: #262626;
+  box-sizing: content-box;
+  border: #262626 1px solid;
   padding: 10px;
-  border-radius: 20px 0;
-  background-color: ghostwhite;
-  min-width: 30%;
-}
-.content-container{
-  width: 50%;
-  height: 0;
-  padding-top: 50%;
-  position: relative;
-  float: left;
-  .text, .image{
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-color: ghostwhite;
-    border: #262626 solid 10px;
-    font-size: 24px;
+  height: 800px;
+
+  .content-container {
+    position: relative;
+    float: left;
+    width: 25%;
+    height: 0;
+    padding-top: 25%;
+    div {
+      position: absolute;
+      top:0;
+      left:0;
+      width: 100%;
+      height: 100%;
+      background-color: white;
+      padding: 10px;
+      box-sizing: border-box;
+    }
+
+    .text{
+
+    }
+
+    .image{
+
+    }
+
+
   }
+
 }
