--- a/src/app/languages/languages.component.scss
+++ b/src/app/languages/languages.component.scss
@@ -1,3 +1,17 @@
-img {
-  padding: 20px 0 15px 0
+ul {
+  margin-left: 20%;
+  width: 80%;
+  align-content: center;
+  li {
+
+    width: 33.3333%;
+    float: left;
+    img {
+      top: 50%;
+      left: 0;
+      width: 40px;
+      height: 40px;
+    }
+  }
 }
+
