--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,5 +1,15 @@
 a {
  border-radius: 24px;
-  width: 130px;
   vertical-align: middle;
+  width: 120px;
+}
+
+
+@media only screen and (max-width: 1200px) {
+ a {
+   flex: 0;
+ }
+  span {
+    display: none;
+  }
 }
