--- a/src/app/interests/interests.component.scss
+++ b/src/app/interests/interests.component.scss
@@ -7,7 +7,7 @@
   box-sizing: content-box;
   border: #262626 1px solid;
   padding: 10px;
-  height: 800px;
+  height: 35vw;
 
   .content-container {
     position: relative;
