added github service added cardview for github service

--- a/src/app/interests/interests.component.scss
+++ b/src/app/interests/interests.component.scss
@@ -6,7 +6,7 @@
   background-color: #262626;
   box-sizing: content-box;
   border: #262626 1px solid;
-  padding: 10px;
+  padding: 10px 10px 0px;
   height: 35vw;
 
   .content-container {
