replaced interests tab with milestoneProjects tab

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,9 @@
 
 <app-about-me id="aboutMe"></app-about-me>
 
-<app-interests id="interests"></app-interests>
-
+<!--<app-interests id="interests"></app-interests>-->
+<app-milestone-projects></app-milestone-projects>
+<app-git-hub></app-git-hub>
 <app-languages id="languages"></app-languages>
 
-<app-git-hub></app-git-hub>
+
