--- a/src/app/interests/interests.component.html
+++ b/src/app/interests/interests.component.html
@@ -1,10 +1,12 @@
 <div class="flowContainer">
   <div class="content-container"><div class="text"><h3></h3></div></div>
-  <div class="content-container"><div class="image" style="background: url(https://cdn.pixabay.com/photo/2018/05/18/15/30/webdesign-3411373_1280.jpg) no-repeat center; background-size: cover" ></div></div>
-  <div class="content-container"><div class="image" style="background: url(https://cdn.pixabay.com/photo/2016/06/29/09/31/chess-1486368_1280.jpg) no-repeat center; background-size: cover" ></div></div>
+  <div class="content-container"><div class="image" style="background-image: url(../../assets/language-icons/android-original.svg)"></div></div>
   <div class="content-container"><div class="text"><h3></h3></div></div>
+  <div class="content-container"><div class="image" style="background-image: url(../../assets/language-icons/android-original.svg)"></div></div>
   <div class="content-container"><div class="text"><h3></h3></div></div>
-  <div class="content-container"><div class="image" style="background: url(https://cdn.pixabay.com/photo/2016/03/27/20/49/usb-1284227_1280.jpg) no-repeat center; background-size: cover" ></div></div>
-  <div class="content-container"><div class="image" style="background: url(https://cdn.pixabay.com/photo/2016/06/29/09/31/chess-1486368_1280.jpg) no-repeat center; background-size: cover" ></div></div>
+  <div class="content-container"><div class="image" style="background-image: url(../../assets/language-icons/android-original.svg)"></div></div>
   <div class="content-container"><div class="text"><h3></h3></div></div>
+  <div class="content-container"><div class="image" style="background-image: url(../../assets/language-icons/android-original.svg)"></div></div>
+  <div class="content-container"><div class="text"><h3></h3></div></div>
+  <div class="content-container"><div class="image" style="background-image: url(../../assets/language-icons/android-original.svg)"></div></div>
 </div>
