--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,22 +1,38 @@
 .container {
-  margin: 20vh 20% 0;
+  margin: 50px 20% 0;
   line-height: 40px;
   font-size: 30px;
+  text-align: center;
 
   h3{
+    margin-bottom: 20px;
     text-transform: uppercase;
     letter-spacing: 3px;
     color: #262626;
-    font-size: larger
-
+    font-size: 36px;
   }
 
   p {
-    margin: 0 5%;
+    margin: 0 auto;
     font-size: 20px;
+    width: 80%;
   }
 
   .section + .section {
-    margin-top: 50px;
+    margin-top: 20px;
+  }
+}
+
+@media only screen and (max-width: 800px){
+  .container {
+    margin: 70px 0;
+    text-align: center;
+  }
+  h3 {
+    font-size: 18px;
+  }
+  p {
+    font-size: 15px;
+    line-height: normal;
   }
 }
