--- a/src/app/git-hub/git-hub.component.html
+++ b/src/app/git-hub/git-hub.component.html
@@ -1,12 +1,14 @@
-<mat-card *ngFor="let item of getSortedData().reverse()">
-  <mat-card-header>
-    <h3>{{item.name}}</h3>
-  </mat-card-header>
-
-  <p *ngIf="item.description != null ">{{item.description}}</p>
-  <mat-card-footer>
-  <P>{{item.last_commit | date: "MMMM dd, y"}}</P>
-  </mat-card-footer>
-</mat-card>
-
+<ul>
+  <div class="divider"></div>
+  <div *ngFor="let repo of gitHUBRepos">
+    <li>
+      <a href="{{repo.url}}">
+        <h3>{{repo.name}}</h3>
+        <p class="description">{{repo.description}}</p>
+        <p class="date">{{repo.last_commit| date: "MMMM dd, yyyy"}}</p>
+      </a>
+    </li>
+    <li class="divider"></li>
+  </div>
+</ul>
 <div style="clear: both"></div>
