--- a/src/app/interests/interests.component.html
+++ b/src/app/interests/interests.component.html
@@ -10,3 +10,4 @@
   <div class="content-container"><div class="text"><h3></h3></div></div>
   <div class="content-container"><div class="image" style="background-image: url(../../assets/language-icons/android-original.svg)"></div></div>
 </div>
+<div style="clear: both"></div>
